# merge-hesitate

./: .gitattributes  .gitignore  Makefile  README.md  data_schema.json  dataset.py  dataset_parallel.py  git_service.py  judger.py  main.py  mergegen_summary.csv  mergegen_timing.csv  model.py  pyproject.toml  run_mergegen.py  string_op.py  t5-hesitate-resolver.py  t5-resolver-original.py  test_mergegen_with_precision.py  test_mergehesitate_with_precision.py  test_tokenizer.py
merge_hesitate/: __init__.py  cli.py  confidence.py  data.py  evaluate.py  features.py  model.py  test.py  train.py  validation.py
merge_hesitate/gan/: __init__.py  discriminator.py  evaluate.py  model.py  train.py  utils.py
mergegen-output/c/ClickHouse/11a9da4c-ee597f6a-ec914b10/: src@Interpreters@executeQuery.mergegen.cpp.json
mergegen-output/c/ClickHouse/2747ca31-9fa60535-ac1745ad/: src@Access@AccessControl.mergegen.cpp.json
mergegen-output/c/ClickHouse/3f5e3590-64d9cb39-57ed5e36/: src@Interpreters@HashJoin@HashJoinMethodsImpl.mergegen.h.json  src@Interpreters@JoinUtils.mergegen.h.json
mergegen-output/c/ClickHouse/5d39ae42-5f04d285-39fb0d57/: src@Processors@QueryPlan@Optimizations@QueryPlanOptimizationSettings.mergegen.cpp.json  src@Processors@QueryPlan@Optimizations@QueryPlanOptimizationSettings.mergegen.h.json
mergegen-output/c/ClickHouse/6d3e6a87-5ffb02b1-2b86d229/: src@Functions@equals.mergegen.cpp.json  (+6 more)
pynb/: data-analysis.ipynb
scripts/: preprocess_dataset.py  split_dataset.py
tokenizer/: merges.txt  special_tokens_map.json  tokenizer.json  tokenizer_config.json  vocab.json
(+1468 files in other folders)
