[project]
name = "merge-hesitate"
version = "0.1.0"
description = "Enhanced Git merge conflict resolution with higher accuracy using hesitation-based approach"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "torch>=1.9.0",
    "transformers>=4.18.0",
    "datasets>=2.0.0",
    "accelerate>=0.12.0",
    "scikit-learn>=1.0.0",
    "tree-sitter>=0.20.0",
    "numpy>=1.20.0",
    "tqdm>=4.62.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["merge_hesitate"]
